--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
 
                     <h3 class="work__title">Management App for ZIS</h3>
 
-                    <a href="https://dribbble.com/shots/22123164-ZIS-Management-App-for-Zakat-Infaq-Shadaqah?utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=ZIS%20-%20Management%20App%20for%20Zakat%2C%20Infaq%20%26%20Shadaqah&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=ZIS%20-%20Management%20App%20for%20Zakat%2C%20Infaq%20%26%20Shadaqah&utm_medium=Social_Share" class="work__button">
+                    <a href="https://www.behance.net/gallery/188357845/Management-Application-for-Zakat-Infaq-and-Shadaqah" class="work__button">
                         View Project <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
