--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
                     <h3 class="work__title">Ecommerce App</h3>
 
-                    <a href="https://dribbble.com/shots/22216953-Ecommerce-App-UI-UX-Design?utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Ecommerce%20App%20-%20UI%20UX%20Design&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Ecommerce%20App%20-%20UI%20UX%20Design&utm_medium=Social_Share" class="work__button">
+                    <a href="https://www.behance.net/gallery/188359017/Ecommerce-App-UI-UX-Design" class="work__button">
                         View Project <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
