--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
 
                     <h3 class="work__title">Animasi 2D</h3>
 
-                    <a href="https://youtu.be/SX5L_C1tUXc" class="work__button">
+                    <a href="https://www.behance.net/gallery/188360825/Animation-2D" class="work__button">
                         View Project <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
