--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
 
                     <h3 class="work__title">Self Ordering Cafe 5Point</h3>
 
-                    <a href="https://dribbble.com/shots/22205680-Self-Ordering-Cafe-Five-Point?utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Self%20Ordering%20Cafe%20Five%20Point&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Self%20Ordering%20Cafe%20Five%20Point&utm_medium=Social_Share" class="work__button">
+                    <a href="https://www.behance.net/gallery/188419433/Self-Ordering-Cafe-Five-Point" class="work__button">
                         View Project <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
