--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
                     <h3 class="work__title">Petshop App</h3>
 
-                    <a href="https://dribbble.com/shots/22217217-Petshop-App-UI-UX-Design?utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Petshop%20App%20-%20UI%20UX%20Design&utm_medium=Social_Share&utm_source=Clipboard_Shot&utm_campaign=faldiramadhan25&utm_content=Petshop%20App%20-%20UI%20UX%20Design&utm_medium=Social_Share" class="work__button">
+                    <a href="https://www.behance.net/gallery/188419915/Petshop-App-UI-UX-Design" class="work__button">
                         View Project <i class='bx bx-right-arrow work__icon'></i>
                     </a>
                 </div>
