--- a/index.html
+++ b/index.html
@@ -659,8 +659,9 @@
                     <a href="https://www.instagram.com/faldirmdhan/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram footer__social-icon'></i>
                     </a>
-                    <li class="footer__social-item">
-                    <a href="https://www.instagram.com/faldirmdhan/" target="_blank" class="footer__social-link">
+                </li>
+                <li class="footer__social-item">
+                    <a href="https://www.behance.net/faldiramadhan" target="_blank" class="footer__social-link">
                         <i class='bx bxl-behance footer__social-icon'></i>
                 </li>
             </ul>
