--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                     <a href="https://github.com/FRamadhanF" target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://dribbble.com/faldiramadhan25" target="_blank" class="home__social-link">
-                        <i class='bx bxl-dribbble'></i>
+                    <a href="https://www.behance.net/faldiramadhan" target="_blank" class="home__social-link">
+                        <i class='bx bxl-behance'></i>
                     </a>
                 </div>
 
@@ -659,10 +659,6 @@
                     <a href="https://www.instagram.com/faldirmdhan/" target="_blank" class="footer__social-link">
                         <i class='bx bxl-instagram footer__social-icon'></i>
                     </a>
-                </li>
-                <li class="footer__social-item">
-                    <a href="https://www.behance.net/faldiramadhan" target="_blank" class="footer__social-link">
-                        <i class='bx bxl-behance footer__social-icon'></i>
                 </li>
             </ul>
 
