--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                         <div class="about__box">
                             <i class='bx bx-award about__icon'></i>
                             <h3 class="about__title">Final Student </h3>
-                            <span class="about__subtitle">IPK 3.50</span>
+                            <span class="about__subtitle">IPK 3.53</span>
                         </div>
                         <div class="about__box">
                             <i class='bx bx-briefcase-alt about__icon'></i>
@@ -144,7 +144,7 @@
                     </div>
 
                     <p class="about__description">
-                        Saya seorang mahasiswa semester 8 yang bersemangat di 
+                        Saya seorang yang bersemangat di 
                         bidang multimedia dan game. Saya tertarik dalam menciptakan 
                         pengalaman visual dan interaktif yang menarik melalui desain grafis, animasi, dan pengembangan game.
                     </p>
