--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
                     <h3 class="home__education">I'm a <span class="typing"></span></h3>
                    <div class="home__button">
-                        <a download="" href="assets/pdf/CV. Faldi Ramadhan Firmansyah" class="button button--ghost">
+                        <a download="" href="assets/pdf/CV_Faldi Ramadhan Firmansyah.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -731,4 +731,5 @@
 </body>
 
 </html>
+
 
